fix: Add padding to remove jump when click on edit icon

--- a/src/app/work-item/work-item-detail/work-item-detail.component.scss
+++ b/src/app/work-item/work-item-detail/work-item-detail.component.scss
@@ -58,7 +58,8 @@
       float: left;
       max-width: calc(100% - 25px);
       margin:0;
-      line-height: 1.3;
+      line-height: 1.5;
+      padding: em(2) em(4.5);
     }
     .detail-title-edit-ico {
       line-height: 2;
